style.css
/* ... */
.skills-list {
  padding: 0%;
  margin: 0%;
  margin-bottom: 13%;
}

.i-btn:hover {
  border-radius: 0.3rem;
  background-color: #ebebff;
}

.contact-section {
  background-color: #6070ff;
  background-image: url('img/contact-form-bg.png');
  background-repeat: no-repeat;
  background-size: contain;
  background-position: right;
  min-height: 100vh;
  flex-direction: column;
  padding: 10%;
  align-items: center;
  justify-content: center;
  text-align: center;
  border-top-left-radius: 120px;
}

.contact-section h1 {
  color: white;
  font-family: 'Poppins', sans-serif;
}

#contact-title {
  font-size: 40px;
  padding-top: 40px;
}

form input,
textarea {
  border-radius: 8px;
  border: 0;
  padding: 13px;
  width: 96%;
  font-family: 'Poppins', sans-serif;
}

form input::placeholder {
  color: grey;
}

form > * {
  display: block;
  margin-bottom: 15px;
}

#contact-dt {
  margin-bottom: 40px;
  font-style: normal;
  font-weight: 200;
  font-size: 20px;
}

.contact-section button {
  padding: 12px;
  border-radius: 8px;
  border: 0;
  color: #6070ff;
  font-size: 17px;
  width: 29vw;
}

#contact-container {
  background-color: white;
  padding-top: 50px;
}

form textarea {
  height: 17vh;
}

.contact-section p {
  color: white;
}

.mobile-menu {
  background: rgba(0, 0, 255, 0.55);
  backdrop-filter: blur(10px);
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.d-none {
  display: none;
}

.menu-header {
  display: flex;
  margin-top: 33px;
}

.menu-header > i {
  margin-left: auto;
  margin-right: 20px;
}

#cancel-icon {
  color: white;
  font-size: 20px;
}

#options-list {
  text-decoration: none;
  list-style: none;
  margin-top: 32px;
}

#options-list > li > a {
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  font-family: 'Poppins', sans-serif;
  color: #fff;
  text-decoration: none;
}

#options-list > li {
  margin-bottom: 40px;
}

/* Popup Window Project Details */

.popup-details {
  background: rgba(167, 173, 181, 0.6);
  backdrop-filter: blur(2px);
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.popup-container {
  margin: 30px 16px;
  height: auto;
  border-radius: 0.8rem;
  background-color: #fff;
  padding: 15px 20px;
  flex-direction: column;
}

#popup-cancel-icon {
  color: #67798e;
  margin-right: 15px;
}

.popup-header {
  align-items: baseline;
}

.popup-title {
  margin: 0%;
  margin-right: auto;
  font-style: normal;
  font-size: 32px;
  color: #172b4d;
}

.popup-info {
  width: 70%;
  align-items: baseline;
  justify-content: space-between;
}

.popup-work-subtitle {
  color: #344563;
  font-weight: 600;
  font-size: 13px;
}

.popup-work-role {
  color: #7a869a;
  font-weight: 600;
  font-size: 13px;
}

.popup-work-date {
  color: #7a869a;
  font-weight: 600;
  font-size: 13px;
}

.popup-image {
  max-height: 60%;
  margin-bottom: 5%;
}

.popup-description {
  color: #344563;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
}

.popup-technologies {
  margin-top: 5%;
  margin-bottom: 5%;
  list-style-type: none;
  width: 75%;
  display: flex;
  flex-direction: row;
  padding: 0%;
  height: 22px;
}

.popup-tech-item {
  background-color: #ebebff;
  border-radius: 10px;
  color: #6070ff;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  letter-spacing: 0.03em;
  text-align: center;
  justify-content: center;
  margin-right: 4%;
}

.popup-link-buttons {
  border-top: #ebecf0 1px solid;
  padding-top: 5%;
}

.btn-popup-style {
  display: inline-flex;
  text-decoration: none;
  border: 1.5px solid #396df2;
  width: 40%;
  border-radius: 7px;
  margin-left: 20px;
  margin-bottom: 3%;
  flex-wrap: wrap;
  color: #396df2;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  text-align: center;
  padding: 2%;
  padding-left: 2%;
  background-color: white;
}

.external-link-icon {
  margin-top: 3%;
  margin-left: 15%;
}

.github-link-icon {
  margin: 0%;
  margin-left: 7%;
}

.popup-description-container {
  display: flex;
  flex-direction: column;
}

.popup-description-desktop {
  display: none;
}

/* Error message */

#error-msg {
  color: white;
  background-color: rgba(255, 0, 0, 0.6);
  border-radius: 3px;
}

.error-border {
  border: 2px solid rgba(255, 0, 0, 0.7);
}

#e3-img {
  border-radius: 1.2rem;
}
/* ... */

